# demo-specklepy

./: .gitignore  README.md  pyproject.toml
demo_specklepy/: adding_materials.py  app.py  speckle_data.py
