[tool.poetry]
name = "demo-specklepy"
version = "0.1.0"
description = ""
authors = ["izzy lyseggen <izzy.lyseggen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^4.14.3"
dash = "^1.19.0"
pandas = "^1.2.2"
specklepy = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
devtools = {extras = ["pygments"], version = "^0.6.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
